--- a/games/blank-phaser-platform/index.html
+++ b/games/blank-phaser-platform/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Phaser Platform</title>
-    <script type="text/javascript" src="/js/phaser.js"></script>
+    <script type="text/javascript" src="js/phaser.min.js"></script>
     <style type="text/css">
-        html, body, #game { height: 100%; }
+        html, body, #game { height: 480px; }
         body{margin: 0; padding: 0;}
     </style>
 </head>
