--- a/games/phaser-simple-game/part1.html
+++ b/games/phaser-simple-game/part1.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
+    <p class="btn"></p>
     <script>var config = {
         type: Phaser.AUTO,
         width: 800,
